--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --mode development",
     "build": "vue-cli-service build",
-    "build:preview": "vue-cli-service build --mode preview",
+    "preview": "vue-cli-service serve --mode preview",
     "lint": "vue-cli-service lint",
     "lint:nofix": "vue-cli-service lint --no-fix",
     "test:unit": "vue-cli-service test:unit",
@@ -13,50 +13,53 @@
   },
   "dependencies": {
     "@antv/data-set": "^0.10.1",
-    "ant-design-vue": "~1.3.9",
+    "ant-design-vue": "~1.3.10",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "enquire.js": "^2.1.6",
     "js-cookie": "^2.2.0",
+    "js-sha1": "^0.6.0",
     "lodash.get": "^4.4.2",
     "lodash.pick": "^4.4.0",
     "md5": "^2.2.1",
     "mockjs2": "^1.0.5",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
-    "viser-vue": "^2.3.3",
-    "vue": "^2.5.22",
-    "vue-clipboard2": "^0.2.1",
-    "vue-cropper": "0.4.4",
+    "qs": "^6.7.0",
+    "viser-vue": "^2.4.6",
+    "vue": "^2.6.10",
+    "vue-clipboard2": "^0.3.0",
+    "vue-cropper": "0.4.9",
     "vue-ls": "^3.2.0",
     "vue-quill-editor": "^3.0.6",
-    "vue-router": "^3.0.1",
+    "vue-router": "^3.0.7",
     "vue-svg-component-runtime": "^1.0.1",
     "vuex": "^3.1.0",
     "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "@ant-design/colors": "^3.1.0",
-    "@babel/polyfill": "^7.2.5",
-    "@vue/cli-plugin-babel": "^3.7.0",
-    "@vue/cli-plugin-eslint": "^3.7.0",
-    "@vue/cli-plugin-unit-jest": "^3.7.0",
-    "@vue/cli-service": "^3.7.0",
+    "@ant-design/icons": "^2.1.1",
+    "@babel/polyfill": "^7.4.4",
+    "@vue/cli-plugin-babel": "^3.9.2",
+    "@vue/cli-plugin-eslint": "^3.9.2",
+    "@vue/cli-plugin-unit-jest": "^3.9.0",
+    "@vue/cli-service": "^3.9.2",
     "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "^1.0.0-beta.20",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
+    "@vue/test-utils": "^1.0.0-beta.29",
+    "babel-core": "6.26.3",
+    "babel-eslint": "^10.0.2",
     "babel-jest": "^23.6.0",
-    "babel-plugin-import": "^1.11.0",
+    "babel-plugin-import": "^1.12.0",
     "eslint": "^5.8.0",
-    "eslint-plugin-html": "^5.0.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-html": "^6.0.0",
+    "eslint-plugin-vue": "^5.2.3",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "opencollective": "^1.0.3",
     "opencollective-postinstall": "^2.0.2",
     "vue-svg-icon-loader": "^2.1.1",
-    "vue-template-compiler": "^2.5.22",
+    "vue-template-compiler": "^2.6.10",
     "webpack-theme-color-replacer": "^1.2.15"
   },
   "eslintConfig": {
